# Data_Engineering_Zoomcamp

Week 6/: README.md  docker-compose.yml  ksql-notes.md  streaming-notes.md
Week 6/java/kafka_examples/: build.gradle  settings.gradle
Week 6/java/kafka_examples/src/main/avro/: rides.avsc  rides_compatible.avsc  rides_non_compatible.avsc
Week 6/ksqldb/: commands.md
Week 6/python/avro_example/: consumer.py  producer.py  ride_record.py  ride_record_key.py  settings.py
Week 6/python/docker/: README.md  docker-compose.yml
Week 6/python/docker/spark/: build.sh  docker-compose.yml  jupyterlab.Dockerfile  spark-worker.Dockerfile
Week 6/python/streams-example/faust/: branch_price.py  producer_taxi_json.py  stream.py  stream_count_vendor_trips.py  taxi_rides.py  windowing.py
Week 6/python/streams-example/pyspark/: README.md  consumer.py  producer.py  settings.py  spark-submit.sh  streaming-notebook.ipynb  streaming.py
Week1/: Week1_Homework.ipynb
Week1/Week1_Homework_PartB/: terraform.tfstate  terraform.tfstate.backup
Week2/: README.md  docker-requirements.txt  etl_gcs_to_bq_parent_flow-deployment.yaml  etl_parent_flow-deployment.yaml  etl_web_to_gcs_parent_flow-deployment.yaml  pyproject.toml
Week2/Flows/Deployments/: docker_deploy.py  parametrized_flow.py
Week2/Flows/GCP/: etl_gcs_to_bq.py  etl_web_to_gcs.py
Week2/Flows/Intro/: ingest_data_flow.py
Week2/Homework/: parametrized_etl_gcs_to_bq.py  parametrized_etl_web_to_gcs.py  solution.md
Week5/: 05_homework.ipynb  download_datasets.py  homework.md
Week7_Project/notebooks/: ingest_data.py
(+16 files in other folders)
